tests/testcases/valid/classes/19_this_with_inheritance.ciel
// Test 'this' in inherited class methods

class Base {
    public:
        int base_value;

        int get_base() {
            return this->base_value;
        }

        void set_base(int val) {
            this->base_value = val;
            return;
        }
};

class Derived : public Base {
    public:
        int derived_value;

        int get_derived() {
            return this->derived_value;
        }

        void set_derived(int val) {
            this->derived_value = val;
            return;
        }

        int get_sum() {
            return this->get_base() + this->derived_value;
        }
};

int main() {
    class Derived d;
    d.base_value = 10;
    d.derived_value = 20;
    int result = d.get_sum();
    if (result == 30) {
        return 0;
    }
    return 1;
}
